# 3d-reconstruction

./: README.md
carrito3d/: CMakeLists.txt  CMakeLists.txt.user.3984be8  main.cpp
mjpg/mjpg-streamer/: mjpg_streamer
mjpg/mjpg-streamer/.svn/: wc.db
mjpg/mjpg-streamer/plugins/input_testpicture/: testpictures.h
mjpg/mjpg-streamer/plugins/input_uvc/: dynctrl.lo  jpeg_utils.lo  v4l2uvc.lo
mjpg/mjpg-streamer/plugins/output_http/: httpd.lo
real-time-3d/: CMakeLists.txt  cloud.data  commands_graph.txt  main.cpp
